Fri Sep 05 15:11:46 GMT 2014  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* include/xapian/compactor.h: Fix formatting of doxygen comment.

Fri Sep 05 15:10:17 GMT 2014  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* HACKING: freecode no longer accepts updates, so drop that item from
	  the release checklist.

Fri Sep 05 14:51:46 GMT 2014  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* api/,backends/brass/,backends/chert/,backends/dbfactory_remote.cc,
	  matcher/mergepostlist.cc,matcher/remotesubmatch.cc,
	  net/progclient.cc: Add missing RETURN() markup for debug logging,
	  highlighted by warning from recent GCC.

Fri Sep 05 14:34:26 GMT 2014  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* backends/dbfactory.cc: Fix incorrect return type in logging
	  annotations for InMemory::open().

Mon Aug 11 05:59:35 GMT 2014  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* configure.ac: For Sun's C++ compiler, pass -library=Crun separately
	  since libtool looks for " -library=stlport4 " (with the spaces).
	  (fixes#650)

Mon Aug 11 05:55:54 GMT 2014  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* configure.ac: Rename XAPIAN_TEST_CXXFLAGS_ to XAPIAN_TEST_CXXFLAGS
	  (since the latter is never used) and make it take a variable to
	  add the flags to.  Also, fix it to restore CXXFLAGS correctly if
	  the success case contains "break".

Sat Aug 02 09:43:04 GMT 2014  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* weight/bm25weight.cc: Improve BM25 upper bound in the case when our
	  wdf upper bound > our document length lower bound.  Thanks to
	  Craig Macdonald for pointing out this trick.

Sat Aug 02 06:42:18 GMT 2014  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* weight/bm25weight.cc: Pre-multiply termweight by (param_k1 + 1).

Sun Jun 22 04:26:30 GMT 2014  Olly Betts <olly@survex.com>

	* AUTHORS,NEWS,configure.ac: Update for 1.2.18.
